\name{NEWS}
\title{News for Package \pkg{cogena}}

\section{Changes in version 1.1.3 (2015-06-25)}{
\itemize{
    \item add heatmapEnrich, plotPPI and netInCluster functions.
    \item sampleColor randomly in heatmapCluster.
    }
}

\section{Changes in version 1.1.1 (2015-04-27)}{
\itemize{
    \item add Molecular Signatures Database v5.0.
    \item import mclust instead of suggesting it.
    }
}

\section{Changes in version 1.0.0 (2015-04-16)}{
\itemize{
    \item cogena is released with Bioconductor 3.1.
    }
}

\section{Changes in version 0.99.3 (2015-04-02)}{
\itemize{
    \item use makeCluster to creat cluster to avoid checking error from 
    Windows.
    }
}

\section{Changes in version 0.99.2 (2015-04-01)}{
\itemize{
    \item Update indent based on the coding style of Bioconductor.
    \item Trim long line.
    }
}

\section{Changes in version 0.99.1 (2015-03-31)}{
\itemize{
    \item Add runnable examples for functions.
    \item Update R version dependency from 2.10 to 3.2.
    \item Add non-empty value sections for some functions.
    }
}

\section{Changes in version 0.99.0 (2015-03-27)}{
\itemize{
    \item Submit cogena to Bioconductor.
    }
}